erDiagram
    %% Core Entity Relationship Diagram for GenCC Database
    
    SUBMISSIONS ||--o{ GENES : "belongs to"
    SUBMISSIONS ||--o{ DISEASES : "belongs to"
    SUBMISSIONS ||--o{ SUBMITTERS : "belongs to"
    SUBMISSIONS ||--o{ CLASSIFICATIONS : "belongs to"
    SUBMISSIONS ||--o{ INHERITANCES : "belongs to"
    SUBMISSIONS ||--o| TRIOS : "optional trio"
    
    DISEASES ||--o{ DISEASE_DISEASE : "self references"
    DISEASE_DISEASE }o--|| DISEASES : "to other diseases"
    
    SUBMISSIONS ||--o{ DISEASE_SUBMISSION : "pivot"
    DISEASES ||--o{ DISEASE_SUBMISSION : "pivot"
    
    PUBLICATIONS ||--o{ PUBLICATION_SUBMISSION : "pivot"
    SUBMISSIONS ||--o{ PUBLICATION_SUBMISSION : "pivot"
    
    SUBMITTERS ||--o{ SUBMISSION_FILES : "owns"
    USERS ||--o{ SUBMISSION_FILES : "created by"
    
    SUBMISSIONS ||--o{ SUBMISSION_TRIO : "pivot"
    TRIOS ||--o{ SUBMISSION_TRIO : "pivot"
    
    USERS ||--o{ NOTIFICATIONS : "receives"
    SUBMITTERS ||--o{ NOTIFICATIONS : "about"

    GENES {
        int id PK
        string uuid
        string curie
        string title
        string hgnc_id
        string symbol
        string name
        string location
        string chr
        json grch37
        json grch38
        json chm13
        json prev_symbol
        json alias_symbol
        json omim_id
        json mane_select
        json mane_plus
        float loeuf
        float pli
        float hi
        float haplo
        float triplo
        int entrez_id
        string uniprot_id
        string ensembl_gene_id
        string ucsc_id
        boolean is_morbid
        boolean is_acmgsf3
        int curations_definitive
        int curations_strong
        int curations_moderate
        int curations_supportive
        int curations_limited
        int curations_disputed
        int curations_refuted
        int curations_animal
        int curations_noknown
        int count_submissions
        int count_unique_diseases
        int count_unique_submitters
        text notes
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    DISEASES {
        int id PK
        string uuid
        string curie
        string title
        text description
        string type
        int status
        json synonyms_exact
        json synonyms_related
        json xrefs
        json meta_parents
        int curations_definitive
        int curations_strong
        int curations_moderate
        int curations_supportive
        int curations_limited
        int curations_disputed
        int curations_refuted
        int curations_animal
        int curations_noknown
        int count_submissions
        int count_unique_genes
        int count_unique_submitters
        timestamp created_at
        timestamp updated_at
    }

    SUBMITTERS {
        int id PK
        string uuid
        string curie
        string title
        string website
        string path_logo
        text text_descriptions
        text text_contact
        text text_assertions
        text text_disclaimer
        boolean downloadable
        int status
        int curations_definitive
        int curations_strong
        int curations_moderate
        int curations_supportive
        int curations_limited
        int curations_disputed
        int curations_refuted
        int curations_animal
        int curations_noknown
        int count_submissions
        int count_unique_diseases
        int count_unique_genes
        timestamp created_at
        timestamp updated_at
    }

    SUBMISSIONS {
        int id PK
        string uuid
        int gene_id FK
        int disease_id FK
        int disease_original_id FK
        int classification_id FK
        int moi_id FK
        int submitter_id FK
        int trio_id FK
        int status
        string workspace
        int order
        date submitted_run_date
        string from_submission_file_name
        int from_submission_file_id
        text private_notes
        string submitted_as_submission_id
        string submitted_as_hgnc_id
        string submitted_as_hgnc_symbol
        string submitted_as_disease_id
        string submitted_as_disease_name
        string submitted_as_moi_id
        string submitted_as_moi_name
        string submitted_as_submitter_id
        string submitted_as_submitter_name
        string submitted_as_classification_id
        string submitted_as_classification_name
        string submitted_as_public_report_url
        text submitted_as_notes
        date submitted_as_date
        text submitted_as_pmids
        string submitted_as_assertion_criteria_url
        timestamp created_at
        timestamp updated_at
    }

    CLASSIFICATIONS {
        int id PK
        string uuid
        string curie
        string title
        text description
        text info_text
        string abbreviation
        string hex_color
        string css_class
        string slug
        string href
        int order
        int status
        timestamp created_at
        timestamp updated_at
    }

    INHERITANCES {
        int id PK
        string uuid
        string curie
        string title
        text description
        text info_text
        string abbreviation
        string hex_color
        string css_class
        int status
        timestamp created_at
        timestamp updated_at
    }

    TRIOS {
        int id PK
        string uuid
        int gene_id FK
        int disease_id FK
        int moi_id FK
        int classification_id FK
        string title
        int status
        timestamp created_at
        timestamp updated_at
    }

    SUBMISSION_FILES {
        int id PK
        string uuid
        int submitter_id FK
        int user_id FK
        int created_by_user FK
        string name
        text body
        string path
        string file_name
        string file_name_original
        string file_type
        string file_type_original
        int file_size
        string file_size_human
        text log
        int status
        date submitted_run_date
        timestamp processed_last_at
        text private_notes
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    DISEASE_DISEASE {
        int parent_id FK
        int child_id FK
        int disease_id FK
        int xref_id FK
        int synonym_id FK
        int equiv_id FK
        string type
        string predicate
        string ontology
        timestamp created_at
        timestamp updated_at
    }

    DISEASE_SUBMISSION {
        int disease_id FK
        int submission_id FK
        string type
        string ontology
        timestamp created_at
        timestamp updated_at
    }

    PUBLICATION_SUBMISSION {
        int publication_id FK
        int submission_id FK
        timestamp created_at
        timestamp updated_at
    }

    SUBMISSION_TRIO {
        int submission_id FK
        int trio_id FK
        timestamp created_at
        timestamp updated_at
    }

    PUBLICATIONS {
        int id PK
        string uuid
        string pubmedid
        string title
        text description
        timestamp created_at
        timestamp updated_at
    }

    USERS {
        int id PK
        string name
        string email
        timestamp email_verified_at
        string password
        string uuid
        string handle
        boolean admin
        string type
        int status
        string remember_token
        timestamp created_at
        timestamp updated_at
    }

    NOTIFICATIONS {
        int id PK
        int user_id FK
        int submitter_id FK
        string ref
        string uuid
        string label
        text message
        json meta
        int count
        string type
        boolean running
        text output
        int status
        timestamp created_at
        timestamp updated_at
    }

    CONFLICTS {
        int id PK
        string ident
        string hgnc_id
        string gene_symbol
        string mondo_id
        string disease
        string moi
        string weak
        string strong
        json submitters
        timestamp created_at
        timestamp updated_at
    }

    TERMS {
        int id PK
        string ident
        string type
        string name
        string value
        string alias
        int weight
        boolean curated
        int status
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    MORBIDS {
        int id PK
        string ident
        string phenotype
        string secondary
        string pheno_omim
        string mim
        string mapkey
        string disputing
        string nondisease
        string mutations
        json genes
        string cyto
        string type
        int status
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    SETTINGS {
        int id PK
        string key_column
        string value_column
    }